通过pubsub-js消息组件,订阅和发布消息

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "axios": "^0.21.1",
         "nanoid": "^3.1.22",
         "prop-types": "^15.7.2",
+        "pubsub-js": "^1.9.3",
+        "pubsubjs": "^0.3.9",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
